<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/recipe_poster"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/i1"
            app:srcCompat="@drawable/i1"
            android:contentDescription="@string/image_poster_decription" />

        <TextView
            android:id="@+id/recipe_name_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@color/colorAccentTransparent"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/widget_recipe_name"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/ingredients_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:padding="10dp"
        android:text="@string/widget_ingredients_label"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ingredients_name_widget"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ellipsize="end"
            android:lines="7"
            android:maxLines="7"
            android:padding="5dp"
            android:text="@string/widget_ingredient_name"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ingredients_qty_widget"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ellipsize="end"
            android:lines="7"
            android:maxLines="7"
            android:padding="5dp"
            android:text="@string/widget_ingredient_qty"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/show_recipe_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:text="@string/widget_btn_view_recipe"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>
