<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_card_item"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/recipe_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/i1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryTransparent" />

    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="@string/recipe_item_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.438" />

        <TextView
            android:id="@+id/recipe_steps"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/orange_border"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/recipe_item_steps"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_name"
            app:layout_constraintVertical_bias="0.741" />

        <TextView
            android:id="@+id/recipe_servings"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/orange_border"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/recipe_item_serves"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_name"
            app:layout_constraintVertical_bias="0.741" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
